alignment issue

--- a/client/src/pages/styles/Contact.css
+++ b/client/src/pages/styles/Contact.css
@@ -101,7 +101,7 @@
 }
 
 .contact__page-code div {
-  margin-left: 15px;
+  margin-left: 25px;
 }
 .contact__page-code__dataType {
   color: #c98bdf;
